Add upload media (images) feature

--- a/glide.yaml
+++ b/glide.yaml
@@ -3,3 +3,6 @@ import:
 - package: github.com/garyburd/go-oauth
 - package: github.com/pkg/errors
   version: ^0.8.0
+- package: golang.org/x/sync
+  subpackages:
+  - errgroup
